# pico-room-sensor

./: .gitignore  .gitmodules  CMakeLists.txt  main.c
env/: pyvenv.cfg
include/: config.h  lwipopts.h  publisher.h  reading.pb.h  room_sensor.h  si7021.h  wifi.h
lib/Si7021/: CMakeLists.txt  si7021.c  si7021.h
proto/: reading.proto
src/: main.c  publisher.c  reading.pb.c  room_sensor.c  si7021.c  wifi.c
